--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "p5js-with-typescript",
+  "name": "convex-structures",
   "version": "1.0.0",
-  "description": "A template for a p5.js sketch using Typescript",
+  "description": "Exploring convex structures with p5.js",
   "default": "index.html",
   "scripts": {
-    "start": "parcel index.html"
+    "start": "parcel index.html",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "dependencies": {
     "@types/p5": "0.9.0",
@@ -17,5 +18,12 @@
     "typescript"
   ],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@jest/globals": "^29.3.1",
+    "@types/jest": "^29.2.5",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1"
+  },
+  "type": "module"
 }
