--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "1.0.0",
   "description": "Exploring convex structures with p5.js",
   "default": "index.html",
+  "source": "src/index.html",
   "scripts": {
-    "start": "parcel index.html",
+    "start": "parcel",
+    "build": "parcel build",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "dependencies": {
     "@types/p5": "0.9.0",
     "mathjs": "^11.4.0",
-    "p5": "0.9.0",
-    "parcel": "^2.7.0"
+    "p5": "0.9.0"
   },
   "keywords": [
     "p5js",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@jest/globals": "^29.3.1",
     "@types/jest": "^29.2.5",
+    "parcel": "^2.8.3",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1"
   },
