--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "dependencies": {
@@ -22,8 +21,9 @@
   "devDependencies": {
     "@jest/globals": "^29.3.1",
     "@types/jest": "^29.2.5",
+    "parcel": "2.8.3",
     "ts-jest": "^29.0.3",
-    "parcel": "^2.8.3"
+    "ts-node": "^10.9.1"
   },
   "type": "module"
 }
